welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
	for (i <- nums()){
                      ^